Fix DeckBuilder on small iOS screens.
- Also improve DeckRow layout on smaller screens as well as numerous
  cases of scrolling on some medium screens.

--- a/client/src/components/DeckList/DeckTable.scss
+++ b/client/src/components/DeckList/DeckTable.scss
@@ -29,6 +29,11 @@
         padding: 0.25rem;
         width: 4rem;
         min-width: 4rem;
+
+        @media only screen and (max-width: 37.5em) {
+            width: 3.5rem;
+            min-width: 3.5rem;
+        }
     }
 
     &-input {
@@ -40,6 +45,12 @@
     &-switchSection {
         cursor: pointer;
         width: 4rem;
+        min-width: 4rem;
+
+        @media only screen and (max-width: 37.5em) {
+            width: 3rem;
+            min-width: 3rem;
+        }
 
         &:hover {
             background-color: var(--color-primary-lighter);
@@ -105,6 +116,7 @@
 
     &-remove {
         width: 3rem;
+        min-width: 3rem;
         font-size: 1.3rem;
         text-align: center;
         cursor: pointer;
